public/css/main.css
/* ... */
@font-face {
    font-family: adelle-heavy;
    src: url(../fonts/Adelle/adelle_heavy-webfont.ttf);
}


@font-face {
    font-family: raleway;
    src: url(../fonts/Raleway/Raleway-Regular.ttf);
}

@font-face {
    font-family: raleway-regular;
    src: url(../fonts/Raleway/Raleway-Regular.ttf);
}


@font-face {
    font-family: raleway-bold;
    src: url(../fonts/Raleway/Raleway-Bold.ttf);
}

@font-face {
    font-family: raleway-black;
    src: url(../fonts/Raleway/Raleway-Black.ttf);
}

@font-face {
    font-family: raleway-extrabold;
    src: url(../fonts/Raleway/Raleway-ExtraBold.ttf);
}


html,
body {
    padding-top: 35px;
    font-family:'Open Sans', 'Noto Sans', sans-serif;

    overflow-x: hidden; /* Prevent scroll on narrow devices */
}
footer {
    padding: 30px 0;
}

#sign-in-modal-container .modal-dialog {
    width: 400px;
}


/*
 * Custom styles
 */
.navbar-brand {
    font-size: 24px;
}

.navbar-container {
    padding: 20px 0 20px 0;
}

.navbar.navbar-fixed-top.fixed-theme {
    background-color: #fff;
    /* border-color: #080808; */
    /* box-shadow: 0 0 5px rgba(0,0,0,.8); */
}

.navbarLink{
  display: inline;
}

.navbar-brand.fixed-theme {
    font-size: 18px;
}

.navbar-container.fixed-theme {
    top: -30px;
    padding: 0;
}

.navbar-right.fixed-theme{
    position: relative;
    top: -15px;
}

.navbar-brand.fixed-theme,
.navbar-container.fixed-theme,
.navbar.navbar-fixed-top.fixed-theme,
.navbar-brand,
.navbar-container{
    transition: 0.8s;
    -webkit-transition:  0.8s;
}
.navbar-nav {

}
.navbar.fixed-theme {
    -webkit-box-shadow: 0 8px 6px -6px #999;
    -moz-box-shadow: 0 8px 6px -6px #999;
    box-shadow: 0 8px 6px -6px #999;

    /* the rest of your styling */
}
#navbar {
    margin-top: 30px;
    max-width: 100%;
    margin-left: auto;
    margin-right: auto;
    max-height: 30px;
}

.navbarStartBtn, .navbarResultsBtn {
    background-color:#ffffff;
    -moz-border-radius:15px;
    -webkit-border-radius:15px;
    border-radius:10px;
    border:1px solid #2D2A3F;
    display:inline-block;
    position: relative;
    top:8px;
    cursor:pointer;
    color:#2D2A3F;
    font: normal normal normal 14px/1.4em raleway,sans-serif;
    font-family: 'Raleway', sans-serif;
    font-size:14px;
    padding:5px 25px;
    text-decoration:none;
    transition: border-color 0.4s ease 0s, background-color 0.4s ease 0s;
}
.navbarResultsBtn{
    margin-left: 8px;
}
.navbarStartBtn:hover {
    background-color:#FCECBE;
    border:1px solid #FCECBE;
    color: #2D2A3F;
    text-shadow: none;
}
.navbarStartBtn:active {
    position:relative;
    top:8px;
}


.grayButton {
    position: relative;
    left: 20px;
    background-color: #eee;
    -moz-border-radius:15px;
    -webkit-border-radius:15px;
    border-radius:10px;
    border:1px solid #eee;
    display:inline-block;
    position: relative;
    top:8px;
    cursor:pointer;
    color:#2D2A3F;
    font: normal normal normal 14px/1.4em raleway,sans-serif;
    font-family: 'Raleway', sans-serif;
    font-size:14px;
    padding:5px 25px;
    text-decoration:none;
    transition: border-color 0.4s ease 0s, background-color 0.4s ease 0s;
}
.grayButton:hover {
    background-color:#fff;
    border:1px solid #fff;
    color: #2D2A3F;
    text-shadow: none;
}
.gray:active {
    position:relative;
    top:1px;
}



.logintext {
    font: normal normal normal 14px/1.4em raleway,sans-serif;
    font-family: 'Raleway', sans-serif;
    font-size:14px;
    padding: 5px 20px;
    letter-spacing: 0.1em;
    display: table-cell;
    vertical-align: middle;

}

#vidembed{
    position: relative;

    background-color:#ccc;
    max-height: 600px;
    overflow:hidden;
    width: 100%;

}

#videooverlay{
    position: absolute;
    top: 0;
    left: 0;
    text-align:center;
    width: 100%;
    height: 100%;
    color: #fff;
    font-family: raleway, sans-serif;
    font-size: 45px;
    background: rgba(0,0,0,0.2);
}
#playlink{
    font-size: 20px;
}

#videotext{
    position: relative;
    top: 50%;
    transform: perspective(1px) translateY(-50%);
}

.video-container {
    position: relative;
    background-color: #fff;
    padding-bottom: 56.25%;
    padding-top: 30px; height: 0; overflow: hidden;
    height: 70%;
    max-height: 600px;
}

.video-container iframe,
.video-container object,
.video-container embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 70%;
    max-height:600px;

}

video#bgvid {

    min-width:1100px;
    width:100%;
    background-size: cover;
    left: 0px;
    backface-visibility:hidden;
    background:url('../assets/psmockup.jpg') no-repeat scroll 0 0 #000;
    background-size:cover;
    bottom:0;
    top: 70px;
    height:auto;
    perspective:1000;
    position:fixed;
    right:0;
    z-index:-1;
}

#vidbanner {
    position:relative;
    overflow:hidden;
    top: 0;
    width: 100%;
    display:flex;
    justify-content: center;
    max-height:700px;

    height:700px;
    left:0;
    transition:background-color 300ms ease;

}

#graybar {
    position: relative;
    top: -70px;
    height: 50px;
    background-color: #2d2a3f;
    font-family: adelle-regular;

}

#bartext {
    position: relative;
    top: 50%;
    transform: translateY(-50%);
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    vertical-align: middle;
    color: #fff;
    font-weight: bold;
    letter-spacing: 0.1em;

}

#computerimage {
    margin-top: 0px;
    max-width: 500px;
    min-width: 500px;
    margin-left: 30px;
    text-align: left;
}

.tagline {

    font-family: raleway-bold, sans-serif;
    font-size: 50px;
    letter-spacing: 0.05em;
    font-style: normal;
    font-variant: normal;
    font-weight: bold;
    line-height: 1em;
    color: #fff;
}

#bigtext{

    display: flex;
    align-items: center;
    justify-content: center;
    height:100%;
}

#text {
    padding-top:70px;
    max-width: 500px;
    margin: 0 auto;
}
/* ... */

